--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link">Notes</a>
+                <a class="nav-link" routerLink="/notes">Notes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Feedback</a>
+                <a class="nav-link" routerLink="/feedback">Feedback</a>
             </li>
         </ul>
     </div>
