--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,3 +1,49 @@
-<p>
-  feedback works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="offset-3"></div>
+    <div class="col-md-6">
+      <form name="form" class="feedback-form" (submit)="sendFeedback()">
+
+        <div class="form-group">
+          <label for="name">First name</label>
+          <input type="text"
+              id="name" class="form-control" name="name"
+              placeholder="Your name!" [(ngModel)]="model.name"/>
+          <div class="invalid-input">
+            <div >Field is required!</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text"
+              id="email" class="form-control" name="email"
+              placeholder="Your email!" [(ngModel)]="model.email"/>
+          <div class="invalid-input">
+            <div>Field is required!</div>
+            <div>Field is not a valid email!</div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="feedback">Feedback</label>
+          <textarea type="text"
+              id="feedback" class="form-control" name="feedback"
+              placeholder="Your feedback!" rows="10" [(ngModel)]="model.feedback">
+          </textarea>
+          <div class="invalid-input">
+            <div>Field is required!</div>
+            <div>Field is too small! (try 10 characters)</div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-info pull-right">
+          <i class="fa fa-envelope-o"></i>
+          <span>Send Feedback</span>
+        </button>
+
+      </form>
+    </div>
+    <div class="offset-3"></div>
+  </div>
+</div>
