--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -2,15 +2,18 @@
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
-      <form name="form" class="feedback-form" (submit)="sendFeedback()">
-
+      <!-- #field_name is an alias for an element. -->
+      <!-- The feedback will be send only if the form is valid. -->
+      <form name="form" #f="ngForm" class="feedback-form" (ngSubmit)="f.form.valid && sendFeedback()" novalidate>
         <div class="form-group">
           <label for="name">First name</label>
           <input type="text"
               id="name" class="form-control" name="name"
-              placeholder="Your name!" [(ngModel)]="model.name"/>
-          <div class="invalid-input">
-            <div >Field is required!</div>
+              placeholder="Your name!" [(ngModel)]="model.name"
+              #name="ngModel" [ngClass]="{'is-invalid' : f.submitted && name.invalid}" required/>
+          <div *ngIf="f.submitted && name.invalid" class="invalid-input">
+            <!-- Individual validation error. -->
+            <div *ngIf="name.errors?.required">Field is required!</div>
           </div>
         </div>
 
@@ -18,10 +21,12 @@
           <label for="email">Email</label>
           <input type="text"
               id="email" class="form-control" name="email"
-              placeholder="Your email!" [(ngModel)]="model.email"/>
-          <div class="invalid-input">
-            <div>Field is required!</div>
-            <div>Field is not a valid email!</div>
+              placeholder="Your email!" [(ngModel)]="model.email"
+              #email=ngModel [ngClass]="{'is-invalid' : f.submitted && email.invalid}"
+              required email />
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div *ngIf="email.errors?.required" >Field is required!</div>
+            <div *ngIf="email.errors?.email">Field is not a valid email!</div>
           </div>
         </div>
 
@@ -29,11 +34,13 @@
           <label for="feedback">Feedback</label>
           <textarea type="text"
               id="feedback" class="form-control" name="feedback"
-              placeholder="Your feedback!" rows="10" [(ngModel)]="model.feedback">
+              placeholder="Your feedback!" rows="10" [(ngModel)]="model.feedback"
+              #feedback="ngModel" [ngClass]="{'is-invalid' : f.submitted && feedback.invalid}"
+              required minlength="10">
           </textarea>
-          <div class="invalid-input">
-            <div>Field is required!</div>
-            <div>Field is too small! (try 10 characters)</div>
+          <div *ngIf="f.submitted && feedback.invalid" class="invalid-input">
+            <div *ngIf="feedback.errors?.required">Field is required!</div>
+            <div *ngIf="feedback.errors?.minlength">Field is too small! (try 10 characters)</div>
           </div>
         </div>
 
