--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,3 +1,50 @@
-<p>
-  notes works!
-</p>
+<div class="container">
+
+  <!-- Note menu -->
+  <div class="row" style="margin-top:12px">
+    <div class="col-md-8">
+      <input type="text" class="form-control" style="width:100%;" placeholder="Search notes ...">
+    </div>
+    <div class="col-md-4">
+      <button type="button" class="btn btn-info pull-right" style="margin-left:12px;" (click)="createNotebook()">
+        <i class="fa fa-plus"></i> New Notebook
+      </button>
+      <button type="button" class="btn btn-warning pull-right" style="margin-left:12px;">
+        <i class="fa fa-plus"></i> New note
+      </button>
+    </div>
+  </div>
+
+  <div class="row" style="margin-top:29px;">
+    <!-- Notebook menu -->
+    <div class="col-md-3">
+      <br>
+      <div class="list-group list-group-flush">
+        <a class="list-group-item  list-group-item-action">
+          <i class="fa fa-book"></i>&nbsp;All
+        </a>
+        <!-- Notebook list -->
+        <a *ngFor="let notebook of notebooks" class="list-group-item list-group-item-action">
+          <i class="fa fa-book"></i>&nbsp; 
+          <input [(ngModel)]="notebook.name" (change)="updateNotebook(notebook)" type="text" class="input-label"
+            style="width: 80%;">
+          <a class="pull-right text-danger" (click)="deleteNotebook(notebook)">
+            <i class="fa fa-trash-o"></i>
+          </a>
+        </a>
+      </div>
+    </div>
+    <!-- Notes panel -->
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-12">
+          <!-- Message if there are no notes -->
+        </div>
+      </div>
+      <div class="row">
+        <!-- Note list -->
+      </div>
+    </div>
+  </div>
+
+</div>
