--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -6,10 +6,14 @@
       <input type="text" class="form-control" style="width:100%;" placeholder="Search notes ...">
     </div>
     <div class="col-md-4">
-      <button type="button" class="btn btn-info pull-right" style="margin-left:12px;" (click)="createNotebook()">
+      <!-- Create new notebook -->
+      <button type="button" class="btn btn-info pull-right" style="margin-left:12px;" 
+        (click)="createNotebook()">
         <i class="fa fa-plus"></i> New Notebook
       </button>
-      <button type="button" class="btn btn-warning pull-right" style="margin-left:12px;">
+      <!-- Create new note -->
+      <button type="button" class="btn btn-warning pull-right" style="margin-left:12px;" 
+        (click)="createNote()" [disabled]="selectedNotebook == null">
         <i class="fa fa-plus"></i> New note
       </button>
     </div>
@@ -20,11 +24,11 @@
     <div class="col-md-3">
       <br>
       <div class="list-group list-group-flush">
-        <a class="list-group-item  list-group-item-action">
+        <a class="list-group-item  list-group-item-action" (click)="selectAllNotes()">
           <i class="fa fa-book"></i>&nbsp;All
         </a>
         <!-- Notebook list -->
-        <a *ngFor="let notebook of notebooks" class="list-group-item list-group-item-action">
+        <a *ngFor="let notebook of notebooks" (click)="selectNotebook(notebook)" class="list-group-item list-group-item-action">
           <i class="fa fa-book"></i>&nbsp; 
           <input [(ngModel)]="notebook.name" (change)="updateNotebook(notebook)" type="text" class="input-label"
             style="width: 80%;">
@@ -39,10 +43,31 @@
       <div class="row">
         <div class="col-md-12">
           <!-- Message if there are no notes -->
+          <h3><p *ngIf="selectedNotebook != null">{{selectedNotebook.name}}</p></h3>
+          <h3><p *ngIf="selectedNotebook == null">All notes</p></h3>
+          <p *ngIf="this.notes.length === 0">There are no notes do display in this notebook</p>
         </div>
       </div>
       <div class="row">
         <!-- Note list -->
+        <div *ngFor="let note of notes" class="card bg-warning" style="border:4px solid white;">
+          <div class="card-body" style="padding:8px; margin-top:8px;">
+            <!-- Title -->            
+            <div>
+              <input type="text" class="input-label-lg" maxlength="18" 
+                (change)="updateNote(note)" style="width: 80%" [(ngModel)]=note.title>
+              <a class="pull-right text-danger" (click)="deleteNote(note)">
+                <i class="fa fa-trash-o"></i>
+              </a>
+            </div>
+            <!-- Text -->
+            <textarea class="input-label" style="width:100%;" rows="6" 
+              (change)="updateNote(note)" [(ngModel)]=note.text></textarea>
+            <!-- Text info: last modification -->
+            <strong class="text-info" style="font-size:small;"></strong>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
