--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -3,7 +3,8 @@
   <!-- Note menu -->
   <div class="row" style="margin-top:12px">
     <div class="col-md-8">
-      <input type="text" class="form-control" style="width:100%;" placeholder="Search notes ...">
+      <input type="text" [(ngModel)]="searchText" class="form-control" style="width:100%;" 
+        placeholder="Search notes ...">
     </div>
     <div class="col-md-4">
       <!-- Create new notebook -->
@@ -50,7 +51,7 @@
       </div>
       <div class="row">
         <!-- Note list -->
-        <app-note  *ngFor="let n of notes" 
+        <app-note  *ngFor="let n of notes | noteSearchFilter:searchText" 
           [note]="n"
           (noteUpdated)="updateNote($event)" 
           (noteDeleted)="deleteNote($event)">
