Add signup component and change routes

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -27,7 +27,7 @@
         </div>
         <!-- Register -->
         <p>Not a member?
-            <a href="">Register</a>
+            <a routerLink="/signup">Sign up</a>
         </p>
       </form>
     </div>
