--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -4,7 +4,10 @@
     <div class="col-md-6">
       <!-- #field_name is an alias for an element. -->
       <!-- The feedback will be send only if the form is valid. -->
-      <form name="form" #f="ngForm" class="feedback-form" (ngSubmit)="f.form.valid && sendFeedback()" novalidate>
+      <form name="form" #f="ngForm" class="feedback-form  p-5" (ngSubmit)="f.form.valid && sendFeedback()" novalidate>
+        
+        <p class="h4 mb-4 text-center">Give us your feedback</p>
+        
         <div class="form-group">
           <label for="name">First name</label>
           <input type="text"
