Add signup navigation item to the navigation component

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,6 +22,9 @@
             <li *ngIf="authority" class="nav-item">
                 <a class="nav-link" (click)="logout()">Logout</a>
             </li>
+            <li *ngIf="!authority" class="nav-item">
+                <a class="nav-link" routerLink="/signup">Signup</a>
+            </li>
         </ul>
     </div>
 </nav>
