--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container">
-    <app-navigation></app-navigation>
-    <router-outlet></router-outlet>
+<div class="container-fluid" style="padding: 0px">
+    <app-navigation ></app-navigation>
+    <router-outlet ></router-outlet>
 </div>
