Form validation: add form error messages with style

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,32 +1,38 @@
-<div class="container">
+<div class="container" >
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
 
       <!-- novalidade is used to disable browsers native form validation -->
-      <form class="text-center border border-light p-5 center-block"
+      <form class="border border-light p-5 mt-5 center-block"
         name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
 
-        <p class="h4 mb-4">Sign in</p>
+        <p class="h4 mb-4 text-center">Sign in</p>
 
-        <div [ngClass]="{'has-error': f.submitted && !username.valid}">
-          <!-- <label for="username">Username</label> -->
-          <input type="text" name="username"  class="form-control mb-4" 
-            [(ngModel)]="model.username" #username="ngModel" placeholder="Username" required>
-          <div *ngIf="f.submitted && !username.valid">Username is required</div>
-        </div>
-        <div [ngClass]="{'has-error': f.submitted && !password.valid}">
-          <!-- <label for="password">Password</label> -->
-          <input type="password" name="password"  class="form-control mb-4"
-          [(ngModel)]="model.password" #password="ngModel" placeholder="Password" required>
-          <div *ngIf="f.submitted && !password.valid">Password is required</div>
+        <div class="form-group">
+          <label for="username">Username</label> 
+          <input type="text" name="username"  class="form-control" [(ngModel)]="model.username" #username="ngModel" 
+            placeholder="Username" [ngClass]="{'is-invalid': f.submitted && !username.valid}" required>
+          <div *ngIf="f.submitted && username.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="username.errors?.required">Username is required</div>
+            <div class="text-danger" *ngIf="username.errors?.email">Username is not valid</div>
+          </div>
         </div>
 
-        <div>
+        <div class="form-group">
+          <label for="password">Password</label> 
+          <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
+            placeholder="Password" [ngClass]="{'is-invalid': f.submitted && !password.valid}" required>
+          <div class="invalid-input" *ngIf="f.submitted && password.invalid">
+            <div class="mb-4 text-danger help-block" *ngIf="password.errors?.required">Password is required</div>
+          </div>
+        </div>
+
+        <div class="text-center">
           <button class="btn btn-info my-4" [disabled]="loading">Login</button>
         </div>
         <!-- Register -->
-        <p>Not a member?
+        <p class="text-center">Not a member?
             <a routerLink="/signup">Sign up</a>
         </p>
       </form>
