Update signin and signup styles

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,13 +1,13 @@
-<div class="container" >
+<div class="container ">
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
 
       <!-- novalidade is used to disable browsers native form validation -->
-      <form class="border border-light p-5 mt-5 center-block"
+      <form class="border border-light p-5 mt-5 center-block" style="background-color: white"
         name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
 
-        <p class="h4 mb-4 text-center">Sign in</p>
+        <p class="h4 mb-4 text-center">Sign In</p>
 
         <div class="form-group">
           <label for="username">Username</label> 
@@ -29,11 +29,11 @@
         </div>
 
         <div class="text-center">
-          <button class="btn btn-info my-4" [disabled]="loading">Login</button>
+          <button class="btn btn-info my-4" [disabled]="loading">Sign In</button>
         </div>
         <!-- Register -->
         <p class="text-center">Not a member?
-            <a routerLink="/signup">Sign up</a>
+            <a routerLink="/signup">Sign Up</a>
         </p>
       </form>
     </div>
