--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
-      <form name="form" class="text-center border border-light p-5 center-block" novalidate>
+      <form name="form" class="text-center border border-light p-5 mt-5 center-block" style="background-color: white" novalidate>
 
         <p class="h4 mb-4">Sign up</p>
         <!-- Email -->
