--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,14 @@
     font-size: larger;
     font-weight: bold;
 }
+
+html, body {
+    height: 100%;
+}
+
+.full-height {
+    border: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
