--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,31 +2,37 @@
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
-      <form name="form" class="text-center border border-light p-5 mt-5 center-block" style="background-color: white" novalidate>
+      <form name="form" class="border border-light p-5 mt-5 center-block" style="background-color: white" 
+      name="form" (ngSubmit)="f.form.valid && createUser()" #f="ngForm" novalidate>
 
-        <p class="h4 mb-4">Sign up</p>
-        <!-- Email -->
-        <div>
-          <input type="text" name="email" class="form-control mb-4" 
-            [(ngModel)]="model.email" #email="ngModel" placeholder="Email" required/>
-          <div *ngIf="f.submitted && !email.valid">Email is required</div>
+        <p class="h4 mb-4 text-center">Sign up</p>
+        
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" name="email" class="form-control" [(ngModel)]="model.email" #email="ngModel" placeholder="Email"
+          [ngClass]="{'is-invalid': f.submitted && !email.valid}" required email/>
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="email.errors?.required">Email is required</div>
+            <div class="text-danger" *ngIf="email.errors?.email">Email is not valid</div>
+          </div>
         </div>
-        <!-- User name -->
-        <div [ngClass]="{'has-error': f.submitted && !username.valid}">
-          <!-- <label for="username">Username</label> -->
-          <input type="text" name="username"  class="form-control mb-4" 
-            [(ngModel)]="model.username" #username="ngModel" placeholder="Username" required>
-          <div *ngIf="f.submitted && !username.valid">Username is required</div>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" name="username"  class="form-control" [(ngModel)]="model.username" #username="ngModel"
+          [ngClass]="{'is-invalid': f.submitted && !username.valid}" placeholder="Username" required>
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="username.errors?.required">Username is required</div>
+          </div>
         </div>
-        <!-- Password -->
-        <div [ngClass]="{'has-error': f.submitted && !password.valid}">
-          <!-- <label for="password">Password</label> -->
-          <input type="password" name="password"  class="form-control mb-4"
-          [(ngModel)]="model.password" #password="ngModel" placeholder="Password" required>
-          <div *ngIf="f.submitted && !password.valid">Password is required</div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
+          [ngClass]="{'is-invalid': f.submitted && !password.valid}" placeholder="Password" required>
+          <div *ngIf="f.submitted && email.invalid" class="invalid-input">
+            <div class="text-danger" *ngIf="password.errors?.required">Password is required</div>
+          </div>
         </div>
-
-        <div>
+        <div class="text-center">
           <button class="btn btn-info my-4" [disabled]="loading">Sign up</button>
         </div>
 
