Add some changes on style

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6">
 
       <!-- novalidade is used to disable browsers native form validation -->
-      <form class="border border-light p-5 mt-5 center-block" style="background-color: white"
+      <form class="border border-light p-5 mt-5 center-block" style="background-color: white; border-radius: 25px;"
         name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
 
         <p class="h4 mb-4 text-center">Sign In</p>
