--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="background-color: white; border-radius: 25px;">
 
   <!-- Note menu -->
-  <div class="row" style="margin-top:12px">
+  <div class="row mt-6" style="margin-top:12px; padding: 10px">
     <div class="col-md-8">
       <input type="text" [(ngModel)]="searchText" class="form-control" style="width:100%;" 
         placeholder="Search notes ...">
