--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5" style="background-color: white; border-radius: 25px;">
   <div class="row">
     <div class="offset-3"></div>
     <div class="col-md-6">
