--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
         <i class="fa fa-sticky-note text-warning"></i>
-        <span class="text-warning"> noteit</span>
+        <span class="text-warning"> MyNotes</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <!-- active -->
+            
             <li *ngIf="authority" class="nav-item ">
                 <a class="nav-link" routerLink="/notes">Notes</a>
             </li>
@@ -22,9 +23,13 @@
             <li *ngIf="authority" class="nav-item">
                 <a class="nav-link" (click)="logout()">Logout</a>
             </li>
-            <li *ngIf="!authority" class="nav-item">
+        
+        </ul>
+        <ul class="navbar-nav">
+            <li *ngIf="!authority" >
                 <a class="nav-link" routerLink="/signup">Signup</a>
             </li>
+    
         </ul>
     </div>
 </nav>
