--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
         data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="collapse navbar-collapse" >
         <ul class="navbar-nav mr-auto">
             <!-- active -->
             <li *ngIf="authority" class="nav-item ">
