Add toast (notification) component. Include toasts for return some operation status.

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -63,11 +63,16 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="row mt-8">
-        <p style="background-color: white; padding: 10px; border-radius: 10px; margin: 10px 5px; width: 100%;">Note detail component</p>
+      <div class="row mt-8" style="background-color: white; padding: 10px; border-radius: 10px; margin: 10px 0px; width: 100%;">
+        <div class="col-md-12">
+            <p class="text-center">Note Details</p> 
+        </div>
       </div>
-      <div class="row mt-4" >
-          <p style="background-color: white; padding: 10px; border-radius: 10px; margin: 5px; width: 100%">Notifications component</p>
+      <div class="row mt-4" style="background-color: white; padding: 10px; border-radius: 10px; margin: 10px 0px; width: 100%">
+        <div class="col-md-12"> 
+          <p class="text-center">Notifications</p>
+          <app-toaster></app-toaster>
+        </div>  
       </div>
     </div>
   </div>
