--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -36,12 +36,7 @@
             <a routerLink="/signup">Sign Up</a>
         </p>
         
-        <div *ngFor="let toast of toasts" class="alert alert-{{toast.type}} alert-dismissible fade show" role="alert">
-          {{ toast.message }}
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="removeToast(toast)">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
+        <app-toaster></app-toaster>
 
       </form>
 
