--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
         data-target="#navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" >
+    <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <!-- active -->
             <li *ngIf="authority" class="nav-item ">
@@ -19,13 +19,13 @@
             <li *ngIf="authority === 'ROLE_ADMIN'" class="nav-item">
                 <a class="nav-link" routerLink="/adminboard">Admin Board</a>
             </li>
-            <li *ngIf="authority" class="nav-item">
-                <a class="nav-link" (click)="logout()">Logout</a>
-            </li>
         
         </ul>
         <ul class="navbar-nav">
 
+            <li *ngIf="authority" class="nav-item">
+                <a class="nav-link" (click)="logout()">Logout</a>
+            </li>
             <li *ngIf="!authority && getLOcationPath() != '/signup'" >
                 <a class="nav-link" routerLink="/signup">Signup</a>
             </li>
