Remove unused console logs and improve form fields validation

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -19,19 +19,23 @@
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" name="username"  class="form-control" [(ngModel)]="model.userName" #username="ngModel"
-          [ngClass]="{'is-invalid': f.submitted && !username.valid}" placeholder="Username" required minlength="2">
+          [ngClass]="{'is-invalid': f.submitted && !username.valid}" placeholder="Username (Between 2 and 10 characters)" 
+          required minlength="2" maxlength="10">
           <div *ngIf="f.submitted && email.invalid" class="invalid-input">
             <div class="text-danger" *ngIf="username.errors?.required">Username is required</div>
             <div class="text-danger" *ngIf="username.errors?.minlength">UserName minimum length is 2 characters</div>
+            <div class="text-danger" *ngIf="username.errors?.maxlength">UserName maximum length is 10 characters</div>
           </div>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" name="password"  class="form-control" [(ngModel)]="model.password" #password="ngModel" 
-          [ngClass]="{'is-invalid': f.submitted && !password.valid}" placeholder="Password" required minlength="4">
+          [ngClass]="{'is-invalid': f.submitted && !password.valid}" placeholder="Password (Between 4 and 8 characters)" 
+          required minlength="4" maxlength="8">
           <div *ngIf="f.submitted && email.invalid" class="invalid-input">
             <div class="text-danger" *ngIf="password.errors?.required">Password is required</div>
             <div class="text-danger" *ngIf="password.errors?.minlength">Password minimum length is 2 characters</div>
+            <div class="text-danger" *ngIf="password.errors?.maxlength">Password maximum length is 8 characters</div>
           </div>
         </div>
         
