Fix layout problems

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container-fluid h-100 row-fluid" style="padding: 0px; background-color: #212;  height:1000px">
+<div class="container-fluid row-fluid app-div">
     <app-navigation ></app-navigation>
     <router-outlet ></router-outlet>
 </div>
